--- a/scss/_recipe_individual.scss
+++ b/scss/_recipe_individual.scss
@@ -90,6 +90,10 @@
   }
 
 
+  .recipe-author-avatar.external-author-avatar{
+    max-width: 30px;
+    max-height: 30px;
+  }
 
   .recipe-meta {
     > div {
